--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,11 @@ body {
 }
 html {
   font-size: 62.5%;
+
+  // @media (max-width: 600px) {
+  //   font-size: 50%;
+  // }
+  // @media (max-width: 900px) {
+  //   font-size: 55%;
+  // }
 }
