--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -1,51 +1,50 @@
 .banner {
-  position: relative;
-  width: 100%;
-  height: 45rem;
+  height: 100vh;
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center center;
-  object-fit: contain;
-  color: #ffffff;
+  background-repeat: no-repeat;
 
-  &__contents {
-    padding-top: 14rem;
-    margin-left: 3rem;
-    padding-bottom: 0.5rem;
-    height: 19rem;
+  &__wrapper {
+    height: inherit;
+    width: inherit;
+    background: linear-gradient(0deg, #111 10%, transparent 90%);
   }
-  &__title {
-    font-size: 5rem;
-    padding-bottom: 0.5rem;
-    font-weight: 800;
-  }
-  &__description {
-    font-size: 1.5rem;
-    font-weight: 600;
-    line-height: 1.3;
-    max-width: 40rem;
-    height: 8rem;
-    padding-top: 2rem;
-  }
-
-  &--fadeBottom {
-    height: 12rem;
-    background-image: linear-gradient(
-      180deg,
-      transparent,
-      rgba(37, 37, 37, 0.61),
-      #111
-    );
-  }
-
-  &__button {
+  &__content {
+    width: inherit;
+    height: inherit;
+    background: linear-gradient(90deg, #111 30%, transparent 70%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 30px;
+    padding-bottom: 150px;
     color: white;
-    background-color: rgba(51, 51, 51, 0.5);
-    transition: all 0.2s ease-in;
-
-    &:hover {
-      color: #111;
-      background-color: #e6e6e6;
-    }
+  }
+  &__name {
+    font-size: 6rem;
+    font-weight: 700;
+  }
+  &__info {
+    font-size: 1.8rem;
+    font-weight: 500;
+    display: flex;
+    gap: 2rem;
+  }
+  &__rating {
+    color: #46d369;
+  }
+  &__overview {
+    margin-top: 1.5rem;
+    font-size: 2rem;
+    color: #999;
+    max-width: 40%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+  }
+  &__buttons {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1.5rem;
   }
 }
