--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -2,9 +2,27 @@
   cursor: pointer;
   border: none;
   outline: none;
-  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
   font-weight: 600;
-  padding: 0.6rem 2rem;
+  padding: 1rem 3rem;
   margin-right: 1rem;
-  border-radius: 0.2rem;
+  border-radius: 0.5rem;
+}
+.button--primary {
+  background-color: #fff;
+  color: #000;
+  transition: all 0.2s ease;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+.button--secondary {
+  background-color: #333;
+  color: #fff;
+  &:hover {
+    opacity: 0.7;
+  }
 }
