added scrolling buttons

--- a/src/components/Row.scss
+++ b/src/components/Row.scss
@@ -1,19 +1,23 @@
 .row {
-  &__title {
+  &__titleHeading {
     text-transform: capitalize;
     color: white;
     margin-left: 2.5rem;
     font-size: 2.5rem;
     font-weight: 600;
+    cursor: pointer;
+    position: relative;
   }
+
   &__posters {
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
-    padding: 2rem 2.5rem;
+    padding: 2rem 4.5rem;
     &::-webkit-scrollbar {
       display: none;
     }
+    scroll-behavior: smooth;
   }
 }
 .row__poster {
@@ -30,4 +34,33 @@
     transform: scale(1.07);
     opacity: 1;
   }
+}
+
+.scroll__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 4rem;
+  height: 30rem;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.6);
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.row:hover .scroll__button {
+  opacity: 1;
+}
+
+.left__button {
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  left: 0;
+}
+.right__button {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  right: 0;
 }
