--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -1,8 +1,18 @@
+@import "../styles/mixins";
+
 .banner {
   height: 100vh;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+
+  @include respond(tab-land) {
+    height: 90vh;
+  }
+  @include respond(tab-port) {
+    background-position: center center;
+    height: 80vh;
+  }
 
   &__wrapper {
     height: inherit;
@@ -19,16 +29,34 @@
     padding-left: 30px;
     padding-bottom: 150px;
     color: white;
+
+    @include respond(tab-port) {
+      background: linear-gradient(90deg, #111 1%, transparent 99%);
+    }
+    @include respond(phone) {
+      background: linear-gradient(
+        90deg,
+        rgba(17, 17, 17, 0.582) 5%,
+        transparent 95%
+      );
+    }
   }
   &__name {
     font-size: 6rem;
     font-weight: 700;
+
+    @include respond(phone) {
+      font-size: 4rem;
+    }
   }
   &__info {
     font-size: 1.8rem;
     font-weight: 500;
     display: flex;
     gap: 2rem;
+    @include respond(phone) {
+      font-size: 1.4rem;
+    }
   }
   &__rating {
     color: #46d369;
@@ -39,12 +67,24 @@
     color: #999;
     max-width: 40%;
     overflow: hidden;
+    --max-lines: 4;
+    overflow: hidden;
     text-overflow: ellipsis;
     display: block;
+    @include respond(tab-port) {
+      max-width: 60%;
+    }
+    @include respond(phone) {
+      max-width: 70%;
+      font-size: 1.5rem;
+    }
   }
   &__buttons {
     display: flex;
     gap: 1rem;
     margin-top: 1.5rem;
+    @include respond(phone) {
+      gap: 0.8rem;
+    }
   }
 }
