--- a/src/components/Row.scss
+++ b/src/components/Row.scss
@@ -1,3 +1,5 @@
+@import "../styles/_mixins.scss";
+
 .row {
   &__titleHeading {
     text-transform: capitalize;
@@ -14,6 +16,9 @@
     overflow-y: hidden;
     overflow-x: scroll;
     padding: 2rem 4.5rem;
+
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none;
     &::-webkit-scrollbar {
       display: none;
     }
@@ -24,7 +29,6 @@
   max-height: 30rem;
   object-fit: contain;
   margin-right: 1.5rem;
-  width: 100%;
   transition: transform 0.3s;
   opacity: 0.9;
   cursor: pointer;
@@ -33,6 +37,10 @@
   &:hover {
     transform: scale(1.07);
     opacity: 1;
+  }
+
+  @include respond(phone) {
+    max-height: 25rem;
   }
 }
 
@@ -49,6 +57,11 @@
   opacity: 0;
   transition: all 0.3s;
   cursor: pointer;
+
+  @include respond(phone) {
+    max-height: 25rem;
+    width: 3rem;
+  }
 }
 .row:hover .scroll__button {
   opacity: 1;
