--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap");
+@import "./styles/mixins";
+
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
 }
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 
-  // @media (max-width: 600px) {
-  //   font-size: 50%;
-  // }
-  // @media (max-width: 900px) {
-  //   font-size: 55%;
-  // }
+  @include respond(tab-land) {
+    font-size: 58%; //1 rem  = 9.28px
+  }
+  @include respond(tab-port) {
+    font-size: 55%; //1REM = 8.8px
+  }
+  @include respond(mobile) {
+    font-size: 50%; //1REM = 8px
+  }
+
+  @include respond(big-destop) {
+    font-size: 75%; //1REM = 14.4px
+  }
 }
