--- a/src/components/MovieCard.scss
+++ b/src/components/MovieCard.scss
@@ -83,3 +83,20 @@
     margin-right: 1rem;
   }
 }
+
+@media only screen and (max-width: 600px), only screen and (hover: none) {
+  .movie__card {
+    &__overlay {
+      background: linear-gradient(
+        0deg,
+        rgba(17, 17, 17, 0.685) 30%,
+        transparent 70%
+      );
+    }
+    &__info {
+      transform: translateY(-1rem);
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+}
