--- a/src/components/MovieDetails.scss
+++ b/src/components/MovieDetails.scss
@@ -3,15 +3,19 @@
 .movie__details {
   width: 90%;
   margin: 0 auto;
-  padding-top: 15rem;
+  padding-top: 10rem;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   opacity: 0;
   animation: opacity 1s ease forwards;
-  @include respond(phone) {
+  @include respond(tab-port) {
+    padding-top: 12rem;
     width: 95%;
+  }
+  @include respond(phone) {
+    padding-top: 10rem;
   }
 }
 @keyframes opacity {
@@ -27,11 +31,31 @@
   display: grid;
   grid-template-columns: 4fr 1fr;
   justify-content: center;
-  align-items: center;
 
   @include respond(tab-port) {
     display: flex;
     flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  &__poster {
+    position: relative;
+    &__overlay {
+      position: absolute;
+      z-index: 2;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+
+      @include respond(tab-port) {
+        background: linear-gradient(
+          0deg,
+          rgba(17, 17, 17, 0.758) 40%,
+          transparent 60%
+        );
+      }
+    }
   }
 
   &__poster > img {
@@ -40,11 +64,11 @@
     border-radius: 1rem;
 
     @include respond(tab-port) {
-      max-height: 40rem;
+      width: 100%;
     }
     @include respond(phone) {
       object-fit: cover;
-      max-height: 20rem;
+      width: 100%;
     }
   }
 }
@@ -57,14 +81,20 @@
     padding: 4rem 2rem;
 
     @include respond(tab-port) {
-      margin-top: 0rem;
+      margin-top: -15rem;
+      margin-top: -15rem;
+      position: relative;
+      z-index: 3;
+    }
+    @include respond(phone) {
+      margin-top: -12.5rem;
     }
   }
   &__title {
     font-size: 5rem;
     font-size: 600;
     @include respond(phone) {
-      font-size: 4rem;
+      font-size: 3rem;
     }
   }
 
@@ -105,7 +135,7 @@
     max-width: 70%;
     font-size: 1.8rem;
     font-weight: 500;
-    word-spacing: 0.6rem;
+    word-spacing: 0.2rem;
     @include respond(phone) {
       font-size: 1.5rem;
       max-width: 90%;
@@ -126,7 +156,6 @@
   }
 
   &__cast {
-    margin-top: 2rem;
     &__title {
       font-size: 3rem;
       font-weight: 500;
@@ -146,6 +175,7 @@
   }
 }
 .cast {
+  max-width: 100%;
   &__member {
     text-align: center;
   }
@@ -167,6 +197,9 @@
   }
   &__name {
     font-size: 1.5rem;
-    width: 7rem;
+    width: 12rem;
+    @include respond(phone) {
+      width: 10rem;
+    }
   }
 }
