--- a/src/components/ShowDetails.scss
+++ b/src/components/ShowDetails.scss
@@ -42,6 +42,10 @@
 
   &__poster {
     position: relative;
+    @include respond(phone) {
+      width: 100%;
+    }
+
     &__overlay {
       position: absolute;
       z-index: 2;
@@ -81,6 +85,9 @@
     flex-direction: column;
     gap: 2rem;
     padding: 4rem 2rem;
+    // display: none;
+    opacity: 0;
+    visibility: hidden;
 
     @include respond(tab-port) {
       margin-top: -15rem;
@@ -204,3 +211,6 @@
     }
   }
 }
+
+//////////////////////////////////////////////////
+// ANIMATIONS
