--- a/src/components/Row.scss
+++ b/src/components/Row.scss
@@ -16,6 +16,7 @@
     overflow-y: hidden;
     overflow-x: scroll;
     padding: 2rem 4.5rem;
+    gap: 1.5rem;
 
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none;
