--- a/src/components/UI/Nav.scss
+++ b/src/components/UI/Nav.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .nav {
   position: fixed;
   top: 0;
@@ -20,7 +22,7 @@
     position: fixed;
     top: 1rem;
     left: 0;
-    padding-left: 2rem;
+    padding-left: 1rem;
     width: 10rem;
     cursor: pointer;
   }
@@ -31,6 +33,10 @@
     gap: 2rem;
     align-items: center;
     margin-right: 3rem;
+    @include respond(phone) {
+      margin-right: 1rem;
+      gap: 0;
+    }
   }
   &__avatar {
     right: 2rem;
