--- a/src/components/MovieCard.scss
+++ b/src/components/MovieCard.scss
@@ -1,5 +1,9 @@
 @import "../styles/mixins";
 
+.movie__card__wrapper {
+  position: relative;
+}
+
 .movie__poster {
   max-height: 30rem;
   object-fit: contain;
@@ -18,6 +22,8 @@
   opacity: 0.8;
   cursor: pointer;
   height: 30rem;
+  transform: scale(0.7);
+  transition: all 0.2s ease;
 
   @include respond(phone) {
     height: 25rem;
@@ -105,4 +111,11 @@
       visibility: visible;
     }
   }
+}
+
+.image__placeholder {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(50%, 50%);
 }
