added spinner on homescreen

--- a/src/components/UI/ImageLoader.scss
+++ b/src/components/UI/ImageLoader.scss
@@ -32,11 +32,11 @@
 
 @-webkit-keyframes pulse {
   50% {
-    background: white;
+    background: #e50914;
   }
 }
 @keyframes pulse {
   50% {
-    background: white;
+    background: #e50914;
   }
 }
