--- a/src/components/Homescreen.scss
+++ b/src/components/Homescreen.scss
@@ -2,15 +2,6 @@
   margin-top: -10rem;
 }
 .homescreen {
+  transition: all 0.5s;
   opacity: 0;
-  animation: opacity 0.5s ease-out forwards;
-}
-
-@keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
