--- a/src/components/UI/Nav.scss
+++ b/src/components/UI/Nav.scss
@@ -14,13 +14,53 @@
     justify-content: space-between;
     align-items: center;
   }
+  &__left {
+    gap: 1rem;
+    display: flex;
+    align-items: center;
+    @include respond(phone) {
+      gap: 0.5rem;
+    }
+
+    & p {
+      color: white;
+      font-size: 1.5rem;
+      padding-left: 1rem;
+      font-weight: 400;
+      cursor: pointer;
+      @include respond(phone) {
+        padding-left: 0rem;
+      }
+    }
+  }
   &__logo {
     width: 10rem;
+    margin-right: 2rem;
+    @include respond(phone) {
+      margin-right: 0.5rem;
+    }
   }
   &__right {
     display: flex;
+    gap: 1rem;
+    align-items: center;
+    @include respond(phone) {
+      gap: 0.5rem;
+    }
+
+    & svg {
+      cursor: pointer;
+      color: white;
+      font-size: 2rem;
+      margin-right: 1rem;
+      @include respond(phone) {
+        margin-right: 0.5rem;
+      }
+    }
   }
   &__avatar {
+    cursor: pointer;
     max-height: 4rem;
+    border-radius: 1rem;
   }
 }
