--- a/src/components/MovieCard.scss
+++ b/src/components/MovieCard.scss
@@ -10,6 +10,7 @@
   opacity: 0.8;
   cursor: pointer;
   width: 20rem;
+  height: 30rem;
   transform: scale(0.7);
   transition: all 0.2s ease;
   display: flex;
@@ -18,6 +19,7 @@
 
   @include respond(phone) {
     width: 18rem;
+    height: 27rem;
   }
 
   &:hover {
@@ -74,10 +76,6 @@
   // margin-right: 1.5rem;
   cursor: pointer;
   border-radius: 1rem;
-
-  @include respond(phone) {
-    // max-height: 25rem;
-  }
 }
 
 .movie__card {
